<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>HelloModule</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <version.jboss-logging>3.6.1.Final</version.jboss-logging>
    <version.jboss-logging-processor>3.0.3.Final</version.jboss-logging-processor>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.jboss.logging</groupId>
      <artifactId>jboss-logging</artifactId>
      <version>${version.jboss-logging}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.logging</groupId>
      <artifactId>jboss-logging-processor</artifactId>
      <version>${version.jboss-logging-processor}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.example</groupId>
      <artifactId>APIModule</artifactId>
      <version>1.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.example</groupId>
      <artifactId>Mod1V1Module</artifactId>
      <version>1.0-SNAPSHOT</version>
    </dependency>
    <!--    <dependency>
      <groupId>org.jboss.modules</groupId>
      <artifactId>jboss-modules</artifactId>
      <version>2.3.0.Final-SNAPSHOT</version>
      <type>jar</type>
    </dependency>-->
    <dependency>
      <groupId>org.example</groupId>
      <artifactId>Mod1V1Module</artifactId>
      <version>1.0-SNAPSHOT</version>
    </dependency>
    <!--                <dependency>
      <groupId>org.example</groupId>
      <artifactId>Mod1V2Module</artifactId>
      <version>1.0-SNAPSHOT</version>
    </dependency>-->
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgument>-AloggingVersion=3.0</compilerArgument>
          <compilerArgs>
            <!-- SE 23+ requires explicit config to turn on annotation processing -->
            <arg>-proc:full</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>hello.Hello</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>